Angular materila theme changed and new icon added in the navbar and color of the title changed in navbar

--- a/Frontend/movie-booking/src/app/navbar/navbar.component.html
+++ b/Frontend/movie-booking/src/app/navbar/navbar.component.html
@@ -1,9 +1,10 @@
 <mat-toolbar color="primary">
-    <span>Book My Movie</span>
-    <span class="example-spacer"></span>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-      <mat-icon>favorite</mat-icon>
+  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+      <img style="width: 70%; margin-bottom: 6px;" src="././assets/video-player.png" />
     </button>
+    <span><span style="color: rgb(229, 81, 81);">Book</span>&nbsp;<span style="color: rgb(157, 157, 157);">My</span>&nbsp;<span style="color: rgba(251, 255, 10, 0.73);">Movie</span></span>
+    <span class="example-spacer"></span>
+    
     
 
     <button mat-flat-button color="primary" class="myButton" *ngIf="isLoggedIn" (click)="getAllMovies()">Get All Movies</button>
