--- a/Frontend/movie-booking/src/app/home/home.component.css
+++ b/Frontend/movie-booking/src/app/home/home.component.css
@@ -1,11 +1,35 @@
-.recenter{
-    width: 100%;
-}
-
 .carousel-container{
     margin-left: auto;
     margin-right: auto;
-    width: 85%;
-    box-sizing: content-box;
-    /* height: 50px; */
+    width: 100%;
+    align-items: center;
+    position: relative;
+}
+
+.image-container{
+    position: absolute;
+    width: 100%;
+}
+
+.header{
+    position: absolute;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    /* font-weight: bold; */
+    font-size: 25px;
+    letter-spacing: 7px;
+
+    padding-top: 35px;
+}
+
+.recenter{
+    margin-left: 14%;
+    /* width: 100%; */
+    /* heighttransform: scale(1.5);: 50%; */
+    transform: scale(2.0);
+}
+
+.header{
+    text-align: center;
+    position: sticky;
 }
