--- a/Frontend/movie-booking/src/app/home/home.component.html
+++ b/Frontend/movie-booking/src/app/home/home.component.html
@@ -1,29 +1,34 @@
-<ngb-carousel *ngIf="images" class="carousel-container">
-	<ng-template ngbSlide>
-		<div class="picsum-img-wrapper">
-			<img [src]="images[0]" alt="Random first slide" class="recenter"/>
-		</div>
-		<div class="carousel-caption">
-			<h3>First slide label</h3>
-			<p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-		</div>
-	</ng-template>
-	<ng-template ngbSlide>
-		<div class="picsum-img-wrapper">
-			<img [src]="images[1]" alt="Random second slide" class="recenter"/>
-		</div>
-		<div class="carousel-caption">
-			<h3>Second slide label</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-		</div>
-	</ng-template>
-	<ng-template ngbSlide>
-		<div class="picsum-img-wrapper">
-			<img [src]="images[2]" alt="Random third slide" class="recenter"/>
-		</div>
-		<div class="carousel-caption">
-			<h3>Third slide label</h3>
-			<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-		</div>
-	</ng-template>
-</ngb-carousel>
+<div class="carousel-container">
+	<ngb-carousel *ngIf="images" class="image-container">
+		<ng-template ngbSlide>
+			<div class="picsum-img-wrapper">
+				<img [src]="images[0]" alt="Random first slide" class="recenter"/>
+			</div>
+			<div class="carousel-caption">
+				<h3>{{labels[0]}}</h3>
+				<p>{{labelDetails[0]}}</p>
+			</div>
+		</ng-template>
+		<ng-template ngbSlide>
+			<div class="picsum-img-wrapper">
+				<img [src]="images[1]" alt="Random second slide" class="recenter"/>
+			</div>
+			<div class="carousel-caption">
+				<h3>{{labels[1]}}</h3>
+				<p>{{labelDetails[1]}}</p>
+			</div>
+		</ng-template>
+		<ng-template ngbSlide>
+			<div class="picsum-img-wrapper">
+				<img [src]="images[2]" alt="Random third slide" class="recenter"/>
+			</div>
+			<div class="carousel-caption">
+				<h3>{{labels[2]}}</h3>
+				<p>labelDetails[2]</p>
+			</div>
+		</ng-template>
+	</ngb-carousel>
+	<div class="header">
+		<p>TRENDING MOVIES</p>
+	</div>
+</div>
