--- a/Frontend/movie-booking/src/app/navbar/navbar.component.html
+++ b/Frontend/movie-booking/src/app/navbar/navbar.component.html
@@ -1,9 +1,13 @@
 <mat-toolbar color="primary">
-  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon" (click)="openHome()">
       <img style="width: 70%; margin-bottom: 6px;" src="././assets/video-player.png" />
-    </button>
+  </button>
+    <!-- <span><span style="color: rgb(229, 81, 81);">Book</span>&nbsp;<span style="color: rgb(157, 157, 157);">My</span>&nbsp;<span style="color: rgba(251, 255, 10, 0.73);">Movie</span></span>
+    <span class="example-spacer"></span> -->
+  <button mat-icon-button class="example-icon favorite-icon" style="width: 135px; font-size: 20px;" (click)="openHome()">
     <span><span style="color: rgb(229, 81, 81);">Book</span>&nbsp;<span style="color: rgb(157, 157, 157);">My</span>&nbsp;<span style="color: rgba(251, 255, 10, 0.73);">Movie</span></span>
     <span class="example-spacer"></span>
+  </button>
     
     
 
